# somfit

./: AUTHORS  BUGS  ChangeLog  HISTORY  Makefile.am  Makefile.in  README  THANKS  config.h.in  configure  configure.ac  somfit.spec.in
man/: Makefile.am  Makefile.in  somfit.1  somfit.1.in  somfit.x
src/: Makefile.am  Makefile.in  define.h  globals.h  key.h  main.c  makeit.c  preflist.h  prefs.c  prefs.h  som.c  som.h  types.h  vignet.c  vignet.h
src/fits/: Makefile.in
